SWIFTsimIO Changelog
====================

v 0.2.3
-------

Backwards-compatibility update:

+ Write "NumFilesPerSnapshot", "NumPart_ThisFile", and "MassTable" to snapshots.

v 0.2.2
-------

Minor bugfixes and improvements:

+ Added the MaterialID field
+ Changed internal energy units to be correct (energy per unit mass).

v 0.2.1
-------

Documentation update!

+ Includes significantly more documentation for how to create initial conditions
  files with `swiftsimio`.
+ Minor bugfixes throughout.
+ Added `swiftsimio.validate_file` to validate your dataset is a SWIFT output
  file before reading.
+ Added a number of metadata properties to the reader for pretty-printing code
  information: `compiler_info`, `library_info`, `hydro_info`, `viscosity_info`,
  `code_info`
+ Added ability to automatically generate smoothing lengths for gas datasets
  in the writer.

v 0.2.0
-------

First writer update:

+ Implements writer functionality. This allows for an object-oriented API to be
  used to create SWIFT IC files.
+ Compatibility changes in the reader to work with self-generated initial
  conditions files.
+ Minor bugfixes.

v 0.1.2
-------

Fixed a minor packaging bug.

v 0.1.1
-------

First minor revision:

+ Fixes a minor packaging issue
+ Implements some boilerplate for upcoming features


v 0.1.0
-------

The first version of the code includes the following:

+ Basic reader functionality implemented
+ `unyt` arrays used for reading data
+ Data read dynamically from snapshot
+ Some basic parsing of header information
+ EAGLE chemistry reader included.